[workspace]
resolver = "2"

members = [
    "src/gc-arena-derive/",
    "src/gc-arena/",
]

[workspace.package]
version = "0.5.0"
authors = ["kyren <catherine@kyju.org>", "moulins", "Aaron Hill <aa1ronham@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kyren/gc-arena"
