[package]
name = "gc-arena-derive"
description = "proc-macro support for gc-arena"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.17", features = ["default", "visit-mut"] }
synstructure = "0.13"
