[package]
name = "gc-arena-derive"
version = "0.1.1-alpha.0"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
workspace = "../../"
license = "MIT"
description = "proc-macro support for gc-arena"
repository = "https://github.com/kyren/gc-arena"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
syn = "0.15"
quote = "0.6"
synstructure = "0.10"
