[package]
name = "gc-arena-derive"
version = "0.2.3-alpha.0"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
license = "MIT"
description = "proc-macro support for gc-arena"
readme = "../../README.md"
repository = "https://github.com/kyren/gc-arena"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0"
syn = "1.0"
synstructure = "0.12"
