[package]
name = "gc-arena-derive"
version = "0.2.2"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
license = "MIT"
description = "proc-macro support for gc-arena"
readme = "../../README.md"
repository = "https://github.com/kyren/gc-arena"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.17", features = ["default", "visit-mut"] }
synstructure = "0.13"
