[package]
name = "gc-arena"
description = "safe garbage collected arenas"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = []
tracing = ["dep:tracing"]

[dependencies]
gc-arena-derive = { path = "../gc-arena-derive", version = "0.3.3"}
sptr = "0.3.2"
tracing = { version = "0.1.37", optional = true, default-features = false }

[dev-dependencies]
rand = "0.8"
trybuild = "1.0"
