[package]
name = "gc-sequence"
version = "0.1.0"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
license = "MIT OR CC0"
description = "a system for encoding safe points for computations running on gc-arena"
repository = "https://github.com/kyren/gc-arena"

[dependencies]
gc-arena = { path = "../gc-arena", version = "0.1" }
