[package]
name = "gc-sequence"
version = "0.2.1"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
license = "MIT"
description = "a system for encoding safe points for computations running on gc-arena"
readme = "../../README.md"
repository = "https://github.com/kyren/gc-arena"

[features]
default = ["std"]
std = []

[dependencies]
gc-arena = { path = "../gc-arena", version = "0.2.1" }
